--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,7 @@ img {
 }
 
 .header-container {
+    height: 56px;
     display: flex;
     align-items: center;
     justify-content: space-between;
