--- a/css/styles.css
+++ b/css/styles.css
@@ -279,6 +279,7 @@ img {
 
 .main-title {
     text-align: center;
+    max-width: 188px;;
     font-weight: 700;
     font-size: 36px;
     line-height: 1.07;
