--- a/css/styles.css
+++ b/css/styles.css
@@ -603,6 +603,10 @@ img {
     width: 100%;
     height: 100%;
 }
+.footer-social {
+width: 40px;
+height: 40px;
+}
 
 .footer-link-icon:hover,
 .footer-link-icon:focus {
