--- a/css/styles.css
+++ b/css/styles.css
@@ -557,6 +557,7 @@ img {
     color: #4d5ae5;
     font-weight: 700;
     font-size: 18px;
+    letter-spacing: 0.03em;
     line-height: 1.17;
     display: block;
     padding: 0;
