--- a/css/styles.css
+++ b/css/styles.css
@@ -252,7 +252,7 @@ img {
 /* ===Hero Styles===============*/
 .hero-section {
     padding: 72px 0;
-        max-width: 320px;
+        min-width: 320px;
         background: #2e2f42;
         background-image: linear-gradient(to bottom,
                 rgba(46, 47, 66, 0.7),
