--- a/css/styles.css
+++ b/css/styles.css
@@ -535,7 +535,7 @@ img {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-list-item:hover .overlay {
+.portfolio-list-item:hover .portfolio-overlay-text {
     transform: translatey(0);
 }
 /* ============ FOOTER STYLES ============ */
