--- a/css/styles.css
+++ b/css/styles.css
@@ -1211,7 +1211,7 @@ textarea::placeholder {
     }
 
     .page-footer {
-        padding: 100px 15px;
+        padding: 100px 0;
     }
 
     .page-footer .container {
